--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,8 @@ services:
    - 5432:5432
   environment:
    - POSTGRES_PASSWORD=postgres
+  volumes:
+   - /go_postgres/:/var/lib/postgresql/data
+volumes:
+  postgres-volume:
+    external: true
