--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   environment:
    - POSTGRES_PASSWORD=postgres
   volumes:
-   - /go_postgres/:/var/lib/postgresql/data
+   - postgres-volume:/var/lib/postgresql/data
 volumes:
   postgres-volume:
-    external: true
+    driver: local
