--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,27 @@
 services:
- postgres:
-  container_name: postgres
-  image: postgres:latest
-  ports:
-   - 5432:5432
-  environment:
-   - POSTGRES_PASSWORD=postgres
-  volumes:
-   - postgres-volume:/var/lib/postgresql/data
+
+  postgres:
+    container_name: postgres
+    image: postgres:latest
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - postgres-volume:/var/lib/postgresql/data
+    restart: unless-stopped
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - 5050:80
+    depends_on:
+      - postgres
+    restart: unless-stopped
+
 volumes:
   postgres-volume:
-    driver: local
